🎨 STYLE: light theme issues with visibility in `Project` component

--- a/src/components/Project/styles/project.scss
+++ b/src/components/Project/styles/project.scss
@@ -23,7 +23,7 @@
     .project-image {
       height: 100%;
       object-fit: cover;
-      mix-blend-mode: multiply;
+      mix-blend-mode: overlay;
       border-radius: var(--border-radius);
       transition: transform 300ms ease-in-out;
     }
